--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,14 @@
 @tailwind utilities;
 
 
+@layer base {
+    :root {
+      height: 100%;
+      --color-primary: hsl(281.853, 100%, 68%);
+    }
+  
+    /* These heights are only there so the example can be centered vertically. */
+    body, #root {
+      height: 100%;
+    }
+  }
